<resources>
    <string name="app_name">Meters</string>
    <string name="Login">Login</string>
    <string name="Reg">Registration</string>
    <string name="VerDate">Verification date</string>
    <string name="LastData">Last data value</string>
    <string name="Send">Send</string>
    <string name="Delete">Delete meter</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="Mail" translatable="false">E-Mail</string>
    <string name="Address">Address</string>
    <string name="Enter">Sign in</string>
    <string name="Description">Description</string>
    <string name="Create">Create Meter</string>
</resources>