<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/regBtnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Reg"
        app:layout_constraintEnd_toEndOf="@+id/RegPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RegPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegAddr" />

    <EditText
        android:id="@+id/RegLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/RegLogin"
        app:layout_constraintStart_toStartOf="@+id/RegLogin"
        app:layout_constraintTop_toBottomOf="@+id/RegLogin" />

    <EditText
        android:id="@+id/RegName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/RegPassword"
        app:layout_constraintStart_toStartOf="@+id/RegPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegPassword" />

    <EditText
        android:id="@+id/RegEMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Mail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/RegName"
        app:layout_constraintStart_toStartOf="@+id/RegName"
        app:layout_constraintTop_toBottomOf="@+id/RegName" />

    <EditText
        android:id="@+id/RegAddr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/RegEMail"
        app:layout_constraintStart_toStartOf="@+id/RegEMail"
        app:layout_constraintTop_toBottomOf="@+id/RegEMail" />

</androidx.constraintlayout.widget.ConstraintLayout>