<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnCreate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/Create"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate_new"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDate_new"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate_new" />

    <EditText
        android:id="@+id/editTextData_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textViewDescription_new"
        app:layout_constraintStart_toStartOf="@+id/textViewDescription_new"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription_new" />

    <EditText
        android:id="@+id/editTextDate_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextData_new"
        app:layout_constraintStart_toStartOf="@+id/editTextData_new"
        app:layout_constraintTop_toBottomOf="@+id/editTextData_new" />

    <EditText
        android:id="@+id/textViewName_new"
        android:layout_width="245dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewDescription_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewName_new"
        app:layout_constraintTop_toBottomOf="@+id/textViewName_new" />

</androidx.constraintlayout.widget.ConstraintLayout>